force-app/main/default/objects/vlocity_ps__CustomerInteraction__c/fields/vlocity_ps__Channel__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>Rep</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>