force-app/main/default/objects/vlocity_ps__CustomerInteraction__c/fields/vlocity_ps__Comments__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>