force-app/main/default/objects/vlocity_ps__CustomerInteraction__c/fields/vlocity_ps__ContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Interactions</relationshipLabel>
    <relationshipName>CustomerInteractions</relationshipName>
    <type>Lookup</type>
</CustomField>