force-app/main/default/objects/vlocity_ps__CustomerInteraction__c/fields/vlocity_ps__DurationInMinute__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DurationInMinute__c</fullName>
    <formula>IF( AND(NOT(ISNULL( vlocity_ps__EndDateTime__c )),NOT(ISNULL( vlocity_ps__StartDateTime__c ))) ,  (vlocity_ps__EndDateTime__c -  vlocity_ps__StartDateTime__c)*24*60 , IF(AND(ISNULL( vlocity_ps__EndDateTime__c ), NOT(ISNULL( vlocity_ps__StartDateTime__c ))), ( NOW() - vlocity_ps__StartDateTime__c)*24*60, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>