force-app/main/default/objects/vlocity_ps__CustomerInteraction__c/fields/vlocity_ps__VerificationTimestamp__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__VerificationTimestamp__c</fullName>
    <label>Verification Timestamp</label>
    <type>DateTime</type>
</CustomField>