force-app/main/default/objects/vlocity_ps__CustomerInteraction__c/fields/vlocity_ps__VerifiedAgentName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__VerifiedAgentName__c</fullName>
    <label>Verified Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>