force-app/main/default/objects/vlocity_ps__CustomerInteraction__c/listViews/vlocity_ps__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>vlocity_ps__AccountId__c</columns>
    <columns>vlocity_ps__Channel__c</columns>
    <columns>vlocity_ps__ContactId__c</columns>
    <columns>vlocity_ps__Comments__c</columns>
    <columns>vlocity_ps__DurationInMinute__c</columns>
    <columns>vlocity_ps__EndDateTime__c</columns>
    <columns>vlocity_ps__StartDateTime__c</columns>
    <columns>vlocity_ps__Status__c</columns>
    <columns>vlocity_ps__Type__c</columns>
    <columns>vlocity_ps__VerifiedAgentName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>